Add AllowAllDevices=true to plugin config
This allows the plugin to use devices from the host.
It is required otherwise EPERM is returned when trying to mount the
device.

Signed-off-by: Brian Goff <cpuguy83@gmail.com>

--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
 	},
 	"PropagatedMount": "/var/lib/butter",
 	"Linux": {
-		"Capabilities": ["CAP_SYS_ADMIN"]
+		"Capabilities": ["CAP_SYS_ADMIN"],
+		"AllowAllDevices": true
 	},
 	"Env": [
 		{"Name": "BTRFS_DEVICE",
